samples/_failures_safe/1761719846_7e0fd5_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c9efebcf.c: In function ‘main’:
./samples/SAFE/__tmp_c9efebcf.c:153:28: error: missing terminating " character
  153 |                     printf("Matrix addition failed: dimension mismatch
      |                            ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_c9efebcf.c:153:21: error: expected expression at end of input
  153 |                     printf("Matrix addition failed: dimension mismatch
      |                     ^~~~~~
./samples/SAFE/__tmp_c9efebcf.c:153:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_c9efebcf.c:153:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_c9efebcf.c:153:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_c9efebcf.c:153:21: error: expected declaration or statement at end of input
